--- a/.github/workflows/2_action_CI_job_summary.yml
+++ b/.github/workflows/2_action_CI_job_summary.yml
@@ -16,22 +16,7 @@ jobs:
       id: color-selector
       run: echo "SELECTED_COLOR=green" >> "$GITHUB_OUTPUT"
 
-    - name: Get color
-        env:
-          SELECTED_COLOR: ${{ steps.color-selector.outputs.SELECTED_COLOR }}
-        run: echo "The selected color is $SELECTED_COLOR"
-
-    ## Adding a job summary
-    - name: Add job summary
-      run: |
-        echo "{markdown content}" >> $GITHUB_STEP_SUMMARY
-        echo "### Hello world! :rocket:" >> $GITHUB_STEP_SUMMARY
-
-    - name: Generate list using Markdown
-      run: |
-        echo "This is the lead in sentence for the list" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY # this is a blank line
-        echo "- Lets add a bullet point" >> $GITHUB_STEP_SUMMARY
-        echo "- Lets add a second bullet point" >> $GITHUB_STEP_SUMMARY
-        echo "- How about a third one?" >> $GITHUB_STEP_SUMMARY
-        
+    #- name: Get color
+    #    env:
+    #      SELECTED_COLOR: ${{ steps.color-selector.outputs.SELECTED_COLOR }}
+    #    run: echo "The selected color is $SELECTED_COLOR"
