--- a/.github/workflows/2_action_CI_job_summary.yml
+++ b/.github/workflows/2_action_CI_job_summary.yml
@@ -15,8 +15,7 @@ jobs:
     - name: Set color
       id: color-selector
       run: echo "SELECTED_COLOR=green" >> "$GITHUB_OUTPUT"
-
-    #- name: Get color
-    #    env:
-    #      SELECTED_COLOR: ${{ steps.color-selector.outputs.SELECTED_COLOR }}
-    #    run: echo "The selected color is $SELECTED_COLOR"
+    - name: Get color
+        env:
+          SELECTED_COLOR: ${{ steps.color-selector.outputs.SELECTED_COLOR }}
+        run: echo "The selected color is $SELECTED_COLOR"
