--- a/.github/workflows/2-CI_OutputParam_EnvVariable.yml
+++ b/.github/workflows/2-CI_OutputParam_EnvVariable.yml
@@ -30,8 +30,10 @@ jobs:
           SELECTED_COLOR=${{ steps.color-selector.outputs.SELECTED_COLOR }}
           echo "The selected color is $SELECTED_COLOR"
 
-    - name: Get color 3 - Assign output to environment variable, then Use environment variable
-      run: |
-        echo "SELECTED_COLOR=${{ steps.color-selector.outputs.SELECTED_COLOR }}" >> $GITHUB_ENV
-        echo "The environment variable is: $SELECTED_COLOR"
+    - name: Get color 3
+      run: echo "MY_ENV_VAR=${{ steps.color-selector.outputs.SELECTED_COLOR }}" >> $GITHUB_ENV
+
+    - name: Use environment variable
+      run: echo $MY_ENV_VAR
+
       
