--- a/.github/workflows/2-CI_OutputParam_EnvVariable.yml
+++ b/.github/workflows/2-CI_OutputParam_EnvVariable.yml
@@ -36,4 +36,6 @@ jobs:
     - name: Use environment variable 4
       run: echo $MY_ENV_VAR
 
+    - name: Use environment variable 5
+      run: echo "The selected color is " $MY_ENV_VAR
       
