--- a/.github/workflows/3-CI_job_summary.yml
+++ b/.github/workflows/3-CI_job_summary.yml
@@ -1,10 +1,10 @@
 name: 3-CI-JobSummary
 
 on:
-  #workflow_dispatch:
-  push:
-    paths:
-      - '**.yml'
+  workflow_dispatch:
+  #push:
+  #  paths:
+  #    - '**.yml'
 
 jobs:
   build:
