--- a/.github/workflows/4-CI-JobSummary-RawHTML.yml
+++ b/.github/workflows/4-CI-JobSummary-RawHTML.yml
@@ -33,8 +33,10 @@ jobs:
       id: set-output
       run: echo "my_output=STATUS UPDATE This step completes successfully." >> $GITHUB_OUTPUT
 
+    - name: Set Environment variable
+      run: echo "MY_ENV_VAR=${{ steps.set-output.outputs.my_output }}" >> $GITHUB_ENV
+
     - name: Write Raw HTML to Job Summary 2
       run: |
-        echo "MY_ENV_VAR=${{ steps.set-output.outputs.my_output }}" >> $GITHUB_ENV
         echo "<h1>Job Summary</h1>" >> $GITHUB_STEP_SUMMARY
-        echo "<p>The output is: $MY_ENV_VAR</p>" >> $GITHUB_STEP_SUMMARY
+        echo "<p>The output is: "$MY_ENV_VAR"</p>" >> $GITHUB_STEP_SUMMARY
