make a more complicated scenario

--- a/.github/workflows/4-CI-JobSummary-RawHTML.yml
+++ b/.github/workflows/4-CI-JobSummary-RawHTML.yml
@@ -30,13 +30,25 @@ jobs:
       run: node write-summary.js   
       
     - name: Set output parameter
-      id: set-output
-      run: echo "my_output=STATUS UPDATE This step completes successfully." >> $GITHUB_OUTPUT
+      id: set-output1
+      run: | 
+        echo "my_output1=STATUS UPDATE Step 10 completes successfully." >> $GITHUB_OUTPUT
+
+    - name: Set more output parameter
+      id: set-output2
+      run: | 
+        echo "my_output2=ERROR Step 20 failed." >> $GITHUB_OUTPUT
 
     - name: Set Environment variable
-      run: echo "MY_ENV_VAR=${{ steps.set-output.outputs.my_output }}" >> $GITHUB_ENV
+      run: |
+        echo "MY_ENV_VAR1=${{ steps.set-output1.outputs.my_output1 }}" >> $GITHUB_ENV
+        echo "MY_ENV_VAR2=${{ steps.set-output2.outputs.my_output2 }}" >> $GITHUB_ENV
 
     - name: Write Raw HTML to Job Summary 2
       run: |
         echo "<h1>Job Summary</h1>" >> $GITHUB_STEP_SUMMARY
         echo "<p>The output is: "$MY_ENV_VAR"</p>" >> $GITHUB_STEP_SUMMARY
+        echo "<p>."</p>" >> $GITHUB_STEP_SUMMARY
+        echo "<p>.."</p>" >> $GITHUB_STEP_SUMMARY
+        echo "<p>..."</p>" >> $GITHUB_STEP_SUMMARY
+        echo "<p>The output is: "$MY_ENV_VAR2"</p>" >> $GITHUB_STEP_SUMMARY
