--- a/.github/workflows/4-CI-JobSummary-RawHTML.yml
+++ b/.github/workflows/4-CI-JobSummary-RawHTML.yml
@@ -48,7 +48,7 @@ jobs:
       run: |
         echo "<h1>Job Summary</h1>" >> $GITHUB_STEP_SUMMARY
         echo "<p>The output is: "$MY_ENV_VAR1"</p>" >> $GITHUB_STEP_SUMMARY
-        echo "<p>."</p>" >> $GITHUB_STEP_SUMMARY
-        echo "<p>.."</p>" >> $GITHUB_STEP_SUMMARY
-        echo "<p>..."</p>" >> $GITHUB_STEP_SUMMARY
+        echo "<p>.</p>" >> $GITHUB_STEP_SUMMARY
+        echo "<p>..</p>" >> $GITHUB_STEP_SUMMARY
+        echo "<p>...</p>" >> $GITHUB_STEP_SUMMARY
         echo "<p>The output is: "$MY_ENV_VAR2"</p>" >> $GITHUB_STEP_SUMMARY
